<resources>
    <string name="app_name">Attendance Manager</string>

    <string name="EntryActivity">Details</string>

    <string name="records_title">Previous Records</string>

    <string name="about_menu_item">About</string>

    <string name="all_attended">All attended</string>

    <string name="some_attended">Attended some</string>

    <string name="per_subject_title">Subject Detail</string>

    <string name="subject">Subject name</string>

    <string name="attended">Attended</string>

    <string name="not_attended">Not Attended</string>

    <string name="submit_button">Submit</string>

    <string name="cancel_button">Cancel</string>

    <string name="record_subject">Subjects</string>

    <string name="record_percent">Attended %</string>

    <string name="detail_total">Total</string>

    <string name="menu_previous_record">Previous Records</string>

    <string name="edit_subject">Edit</string>

    <string name="save_button">Save</string>

    <string name="checkbox_message">Check if teacher absent</string>
</resources>
