<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerSubjectDetail">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".PerSubjectDetail">

        <TextView
            android:id="@+id/detail_subject_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:textSize="@dimen/detail_subject" />

        <TextView
            android:id="@+id/detail_subject_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_subject_name1"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/detail_subject_margin"
            android:textSize="@dimen/detail_subject" />

        <LinearLayout
            android:id="@+id/detail_titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_subject_name2"
            android:layout_marginTop="@dimen/detail_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/detail_subject_margin"
                android:layout_weight="1"
                android:text="@string/attended"
                android:textSize="@dimen/detail_fontSize" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/detail_subject_margin"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/detail_total"
                android:textSize="@dimen/detail_fontSize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/details_values"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_titles"
            android:layout_marginTop="@dimen/detail_subject_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/per_subject_attended_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/detail_subject_margin"
                android:layout_weight="1"
                android:textSize="@dimen/detail_fontSize" />

            <TextView
                android:id="@+id/per_subject_total_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/detail_subject_margin"
                android:layout_weight="1"
                android:gravity="right"
                android:textSize="@dimen/detail_fontSize" />

            <EditText
                android:id="@+id/per_subject_attended_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/detail_subject_margin"
                android:layout_weight="1"
                android:inputType="number"
                android:textSize="@dimen/detail_fontSize"
                android:visibility="gone" />

            <EditText
                android:id="@+id/per_subject_total_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/detail_subject_margin"
                android:layout_weight="1"
                android:gravity="right"
                android:inputType="number"
                android:textSize="@dimen/detail_fontSize"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/per_subject_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/details_values"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/detail_margin"
            android:layout_marginTop="@dimen/detail_margin"
            android:textSize="@dimen/detail_percent_size" />

        <LinearLayout
            android:id="@+id/save_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/details_values"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/detail_margin"
            android:layout_marginTop="@dimen/detail_margin"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/per_subject_submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_button" />

            <Button
                android:id="@+id/per_subject_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_button" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>